--- a/src/LarpManager/Views/forum/post_response.twig
+++ b/src/LarpManager/Views/forum/post_response.twig
@@ -1,12 +1,5 @@
 {% extends "layout.twig" %}
 
-{% block head %}
-	{{ parent() }}
-	
-	{# inclusion du plugin meltdown pour la saisie du post #}
-	<link rel="stylesheet" href="{{ app.request.basepath }}/css/meltdown.css" />
-{% endblock head %}
-
 {% block title %}Forum - Répondre à un message{% endblock title %}
 
 {% block content %}
@@ -50,19 +43,16 @@
 
 	{{ parent() }}
 
-	{# inclusion du plugin meltdown pour la saisie du post #}   
-	<script src="{{ app.request.basepath }}/js/lib/element_resize_detection.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/js-markdown-extra.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/rangyinputs-jquery.min.js"></script>
-    <script src="{{ app.request.basepath }}/js/jquery.meltdown.js"></script>
-	         
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
 	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#post_text').meltdown({
-				openPreview: true,
-				sidebyside: true
-			});
+		tinyMCE.init({
+				mode: "textareas",
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview", 
 		});
+		
 	</script>
 
 {% endblock javascript %}
