liste des personnages et recherche des personnages

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -26,7 +26,7 @@
 						<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
 						<li><a href="{{ path('groupe.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
-						<li><a href="{{ path('personnage.list') }}">Liste des personnages</a></li>
+						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
 					</ul>
 				</li>
 			{% endif %}
