--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -86,9 +86,10 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joueur<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('forum') }}">Forum</a></li>
-						<li><a href="{{ path('competence.joueur') }}">Les compétences</a></li>
-						<li><a href="{{ path('classe.joueur') }}">Les classes</a></li>
+						<li><a href="{{ path('competence.list') }}">Les compétences</a></li>
+						<li><a href="{{ path('classe.list') }}">Les classes</a></li>
 						<li><a href="{{ path('groupeSecondaire.list') }}">Les groupes secondaires</a></li>
+						<li><a href="{{ path('religion.list') }}">Les religions</a></li>
 					</ul
 				</li>
 			{% endif %}
