--- a/src/LarpManager/Views/public/classe/list.twig
+++ b/src/LarpManager/Views/public/classe/list.twig
@@ -4,18 +4,15 @@
 
 {% block content %}
 
-	<div class="container-fluid">
-	
 		<ol class="breadcrumb">
 			<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 			<li class="active">Les classes</li>
 		</ol>
 	
 		<div class="row">
-		
 		{% for classe in classes %}
-			<div class="col-sm-4 col-md-4 ">
-				<div class="well well-sm">
+			<div class="col-sm-4 col-md-4">
+				<div class="well well-sm fixed-height">
 				<div class="media">
 		    		<div class="media-left media-top">
 		      			{# Dans le cas ou on associe une image aux classes
@@ -31,7 +28,8 @@
 		      					<h6 class="list-group-item-heading">Compétences acquises à la création</h6>
 				      			<p>
 				      				{% for competenceFamily in classe.competenceFamilyCreations %}
-				      					<span  data-toggle="tooltip" data-placement="top" title="{{ competenceFamily.description }}">{{ competenceFamily.label|e }}</span>
+				      					{% if loop.index != 1 %},&nbsp;{% endif %}
+				      					<span  data-toggle="tooltip" data-placement="top" title="{{ competenceFamily.description }}">{{ competenceFamily.label }}</span>
 				      				{% endfor %}
 				      			</p>
 				      		</li>
@@ -39,7 +37,18 @@
 				      			<h6 class="list-group-item-heading">Compétences favorites</h6>
 				      			<p>
 									{% for competenceFamily in classe.competenceFamilyFavorites %}
-				      					<span  data-toggle="tooltip" data-placement="top" title="{{ competenceFamily.description }}">{{ competenceFamily.label|e }}</span>
+										{% if loop.index != 1 %},&nbsp;{% endif %}
+				      					<span  data-toggle="tooltip" data-placement="top" title="{{ competenceFamily.description }}">{{ competenceFamily.label }}</span>
+				      				{% endfor %}
+				      			</p>
+		      				</li>
+		      				
+		      				<li class="list-group-item">
+				      			<h6 class="list-group-item-heading">Compétences normales</h6>
+				      			<p>
+									{% for competenceFamily in classe.competenceFamilyNormales %}
+										{% if loop.index != 1 %},&nbsp;{% endif %}
+				      					<span  data-toggle="tooltip" data-placement="top" title="{{ competenceFamily.description }}">{{ competenceFamily.label }}</span>
 				      				{% endfor %}
 				      			</p>
 		      				</li>
@@ -49,9 +58,9 @@
 		  		</div>
 		  	</div>
 		{% endfor %}
+		</div> <!-- end row -->
 		
-		</div>
-	</div>
+	
 
 {% endblock content %}
 
