--- a/src/LarpManager/Views/admin/groupeSecondaire/list.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/list.twig
@@ -27,6 +27,15 @@
 		   	<li class="list-group-item">
 		   		<a href="{{ path('groupeSecondaire.admin.type.add') }}">Ajouter un type de groupe secondaire</a>
 		   	</li>
+		   	<li class="list-group-item">
+		   		<div class="list-group-item"><h6>Rechercher</h6></div>
+		   		
+		   		<form class="form" action="{{ path('groupeSecondaire.admin.list') }}" method="POST" {{ form_enctype(form) }}>
+					{% form_theme form 'Form/bootstrap_3_horizontal_layout.html.twig' %}
+					{{ form(form) }}
+		   		</form>
+		   		<a href="{{ path('groupeSecondaire.admin.list') }}">Reset</a>
+		   	</li>
 		</ul>
 		 
 		{{ paginator|raw }}
