--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -23,8 +23,8 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('annonce.list') }}">Liste des annonces</a></li>
 						<li><a href="{{ path('gn.list') }}">Liste des grandeurs natures</a></li>
-						<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
-						<li><a href="{{ path('groupe.list') }}">Liste des groupes</a></li>
+						<li><a href="{{ path('user.admin.list') }}">Liste des utilisateurs</a></li>
+						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
 					</ul>
@@ -39,7 +39,6 @@
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
 						<li><a href="{{ path('territoire') }}">Territoires</a></li>
 						<li><a href="{{ path('langue') }}">Langues</a></li>
-						<li><a href="{{ path('groupe.list') }}">Groupes</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
