--- a/src/LarpManager/Views/admin/annonce/add.twig
+++ b/src/LarpManager/Views/admin/annonce/add.twig
@@ -2,13 +2,6 @@
 
 {% block title %}Annonces{% endblock title %}
 
-{% block head %}
-	{{ parent() }}
-	
-	{# inclusion du plugin meltdown pour la saisie du post #}
-	<link rel="stylesheet" href="{{ app.request.basepath }}/css/meltdown.css" />
-{% endblock head %}
-
 {% block content %}
 
 	<ol class="breadcrumb">
@@ -18,7 +11,7 @@
 	</ol>
 	
 	<div class="well bs-component">
-		<form action="{{ path('annonce.add') }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('annonce.add') }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
 				<legend>Ajout d'une annonce</legend>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
@@ -33,19 +26,16 @@
 
 	{{ parent() }}
 
-	{# inclusion du plugin meltdown pour la saisie du post #}   
-	<script src="{{ app.request.basepath }}/js/lib/element_resize_detection.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/js-markdown-extra.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/rangyinputs-jquery.min.js"></script>
-    <script src="{{ app.request.basepath }}/js/jquery.meltdown.js"></script>
-	         
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
 	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#annonce_text').meltdown({
-				openPreview: true,
-				sidebyside: true
-			});
+		tinyMCE.init({
+				mode: "textareas",
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview", 
 		});
+		
 	</script>
 
 {% endblock javascript %}
