--- a/src/LarpManager/Views/admin/annonce/update.twig
+++ b/src/LarpManager/Views/admin/annonce/update.twig
@@ -2,13 +2,6 @@
 
 {% block title %}Annonces{% endblock title %}
 
-{% block head %}
-	{{ parent() }}
-	
-	{# inclusion du plugin meltdown pour la saisie du post #}
-	<link rel="stylesheet" href="{{ app.request.basepath }}/css/meltdown.css" />
-{% endblock head %}
-
 {% block content %}
 
 	<ol class="breadcrumb">
@@ -27,25 +20,49 @@
 		</form>
 	</div>
 	
+	<div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	    <div class="modal-dialog">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <h6>Confirmer la suppression</h6>
+	            </div>
+	            <div class="modal-body">
+	            	<p>Etes-vous certain de vouloir supprimer l'annonce suivante :</p>
+	            	{{ annonce.title }}
+	            	{{ annonce.text|markdown }}
+	            </div>
+	            <div class="modal-footer">
+	            	<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+	            	<a href="#" id="submit" class="btn btn-success success">Supprimer</a>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+	
 {% endblock content %}
 
 {% block javascript %}
 
 	{{ parent() }}
 
-	{# inclusion du plugin meltdown pour la saisie du post #}   
-	<script src="{{ app.request.basepath }}/js/lib/element_resize_detection.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/js-markdown-extra.js"></script>
-    <script src="{{ app.request.basepath }}/js/lib/rangyinputs-jquery.min.js"></script>
-    <script src="{{ app.request.basepath }}/js/jquery.meltdown.js"></script>
-	         
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
 	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#annonce_text').meltdown({
-				openPreview: true,
-				sidebyside: true
-			});
+		tinyMCE.init({
+				mode: "textareas",
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview", 
 		});
+
+		$(document).ready(function() {
+
+			$('#submit').click(function(){
+			    $('form').submit();
+			});	
+		});
+		
+		
 	</script>
 
 {% endblock javascript %}
