--- a/src/LarpManager/Views/admin/groupe/add.twig
+++ b/src/LarpManager/Views/admin/groupe/add.twig
@@ -6,7 +6,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path("groupe.list") }}">Liste des groupes</a></li>
+		<li><a href="{{ path("groupe.admin.list") }}">Liste des groupes</a></li>
 		<li class="active">Ajout d'un groupe</li>
 	</ol>
 	
