--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -27,7 +27,7 @@
 				{% if personnage.personnageReligion %}
 					{{ personnage.personnageReligion.religion.label }} - {{ personnage.personnageReligion.religionLevel.label }} - <a href="{{ path('forum.topic',{'index': personnage.personnageReligion.religion.topic.id }) }}">Forum</a>
 				{% else %}
-					<a href="{{ path('personnage.religion.add',{'index': personnage.id}) }}">Choisir une religion</a>
+					<a href="{{ path('personnage.religion.add',{'personnage': personnage.id}) }}">Choisir une religion</a>
 				{% endif %}
 				</p>
 			</div>
@@ -39,7 +39,7 @@
 				</p>
 				{% endfor %}
 				<p class="list-group-item-text">
-					<a href="{{ path('personnage.competence.add', {'personnage': app.user.personnage.id}) }}">Acheter une nouvelle compétence</a>
+					<a href="{{ path('personnage.competence.add', {'personnage': personnage.id}) }}">Acheter une nouvelle compétence</a>
 				</p>
 			</div>
 			<div class="list-group-item">
