ajout swiftmailer, début d'utilisation pour confirmer l'adresse mail des joueurs.

--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -71,7 +71,7 @@
 	    				{% if groupe.responsable %}<li><strong>{{ groupe.responsable.username }}</strong>&nbsp;(Responsable du groupe)</li>{% endif %}
 						{% for participant in groupe.participants %}
 						<li>
-							<strong>{{ participant }} </strong>: {{ participant.user.email }}
+							<strong>{{ participant }} </strong>: {{ participant.user.email }}&nbsp;<a href="{{ path('groupe.admin.participant.remove', {'groupe': groupe.id, 'participant': participant.id}) }}">Retirer</a>
 						</li>
 						{% endfor %}
 	    				</ul>
