--- a/src/LarpManager/Views/homepage/orga.twig
+++ b/src/LarpManager/Views/homepage/orga.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Acceuil{% endblock title %}
+{% block title %}Accueil{% endblock title %}
 
 {% block content %}
 	   		
