--- a/src/LarpManager/Views/user/forgot-password.twig
+++ b/src/LarpManager/Views/user/forgot-password.twig
@@ -4,40 +4,41 @@
 
 {% block content %}
 
-	<div class="page-header">
-    	<h1>Mot de passe oublié ?</h1>
-    </div>
+	<div class="well well-sm">
+		<div class="page-header">
+	    	<h1>Mot de passe oublié ?</h1>
+	    </div>
+	
+	    <p class="text-muted lead">
+	        Entrez votre adresse mail, les instruction pour modifier votre mot de passe vous seront envoyés.
+	    </p>
+	
+	    {% if error %}
+	        <div class="alert alert-danger">{{ error|nl2br }}</div>
+	    {% endif %}
+	
+	    <form class="form-horizontal" method="POST" action="{{ path('user.forgot-password') }}">
+	        <div class="form-group">
+	            <label class="col-sm-2 control-label" for="inputEmail">Votre adresse email</label>
+	            <div class="col-sm-8">
+	                <input class="form-control" name="email" type="text" id="inputEmail" required value="{{ email }}">
+	            </div>
+	        </div>
+	        <div class="form-group">
+	            <div class="col-sm-8 col-sm-offset-2">
+	                <button type="submit" class="btn btn-primary">Envoyer les instructions</button>
+	                <a href="{{ path('user.login') }}" style="margin-left: 10px;">Retourner à la page de connection</a>
+	            </div>
+	        </div>
+	
+	        <div class="form-group">
+	            <div class="col-sm-8 col-sm-offset-2" style="margin-top: 20px;">
+	                <hr/>
+	                Si vous ne recevez pas de mail d'içi quelques minutes, vérifiez votre dossier spam ou poubelle.
+	                L'expéditeur est <strong>{{ fromAddress }}</strong>.
+	            </div>
+	        </div>
+	    </form>
 
-    <p class="text-muted lead">
-        Entrez votre adresse mail, les instruction pour modifier votre mot de passe vous seront envoyés.
-    </p>
-
-    {% if error %}
-        <div class="alert alert-danger">{{ error|nl2br }}</div>
-    {% endif %}
-
-    <form class="form-horizontal" method="POST" action="{{ path('user.forgot-password') }}">
-        <div class="form-group">
-            <label class="col-sm-2 control-label" for="inputEmail">Votre adresse email</label>
-            <div class="col-sm-8">
-                <input class="form-control" name="email" type="text" id="inputEmail" required value="{{ email }}">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-8 col-sm-offset-2">
-                <button type="submit" class="btn btn-primary">Envoyer les instructions</button>
-                <a href="{{ path('user.login') }}" style="margin-left: 10px;">Retourner à la page de connection</a>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-8 col-sm-offset-2" style="margin-top: 20px;">
-                <hr/>
-                If you don't get an email within a few minutes, make sure to check your spam or junk folder.
-                The sender is <strong>{{ fromAddress }}</strong>.
-            </div>
-        </div>
-    </form>
-
-
+	</div>
 {% endblock %}
