--- a/src/LarpManager/Views/user/register-confirmation-sent.twig
+++ b/src/LarpManager/Views/user/register-confirmation-sent.twig
@@ -4,12 +4,11 @@
 
 {% block content %}
 
-	<div class="page-header">
-    	<h1>Merci !</h1>
-    <div class="page-header">
+	<div class="well well-sm">
+		<h1>Merci !</h1>
 
-    <p>Un email a été envoyé à <strong>{{ email }}</strong>.</p>
+    	<p>Un email a été envoyé à <strong>{{ email }}</strong>.</p>
 
-    <p>Merci de cliquer sur le lien présent dans le message pour activer votre compte.</p>
-
+    	<p>Merci de cliquer sur le lien présent dans le message pour activer votre compte.</p>
+	</div>
 {% endblock %}
