--- a/src/LarpManager/Views/user/reset-password.twig
+++ b/src/LarpManager/Views/user/reset-password.twig
@@ -1,9 +1,10 @@
-{% extends layout_template  %}
+{% extends "layout.twig"  %}
 
 {% block title %}Modifier le mot de passe{% endblock %}
 
 {% block content %}
 
+<div class="well well-sm">
 	<div class="page-header">
     	<h1>
         	Choisissez un nouveau mot de passe, {{ user.displayName }}
@@ -34,5 +35,5 @@
             </div>
         </div>
     </form>
-
+</div>
 {% endblock %}
