Ajout de la date de naissance dans l'état-civil

--- a/src/LarpManager/Views/admin/user/etatCivil.twig
+++ b/src/LarpManager/Views/admin/user/etatCivil.twig
@@ -36,6 +36,10 @@
 						<td>{{ user.etatCivil.prenom }}</td>
 					</tr>
 					<tr>
+						<th>Date de naissance</th>
+						<td>{{ user.etatCivil.dateNaissance }}</td>
+					</tr>
+					<tr>
 						<th>Prénom d'usage</th>
 						<td>{{ user.etatCivil.prenomUsage }}</td>
 					</tr>
