--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -85,6 +85,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joueur<span class="caret"></span></a>
 					<ul class="dropdown-menu">
+						<li><a href="{{ path('etatCivil') }}">Mon état-civil</a></li>
 						<li><a href="{{ path('forum') }}">Forum</a></li>
 						<li><a href="{{ path('competence.list') }}">Les compétences</a></li>
 						<li><a href="{{ path('classe.list') }}">Les classes</a></li>
