Correection erreur lors de la création d'un groupe. Ajout de la possibilité de mise en page sur la description d'un groupe.

--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -30,7 +30,7 @@
     					<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     					Attention, ce groupe n'a pas de description.
     				{% else %}
-    					{{ groupe.description }}
+    					{{ groupe.description|markdown }}
     				{% endif %}
     				</p>
 	    		</div>
