--- a/src/LarpManager/Views/groupe/fragment/info.twig
+++ b/src/LarpManager/Views/groupe/fragment/info.twig
@@ -4,7 +4,7 @@
 	</div>
 	<div class="panel-body">
 		{% if groupe.description %}
-    		{{ groupe.description }}
+			{{ groupe.description|markdown }}
     	{% endif %}
 	</div>
 	    		
