Erreur sur le test permettant de bloquer les achats de compétences si le personnage n'a pas suffisament de xp.

--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -25,7 +25,7 @@
 					</div>
 					<div class="col-xs-1 col-md-1">
 						{# nombre de sujets #}
-						{{ topic.posts|length }} Sujets
+						{{ topic.postCount }} Sujets
 					</div>
 					<div class="col-xs-3 col-md-3">
 						{# dernier message #}
